-
Bug
-
Resolution: Fixed
-
Major
-
Lustre 2.4.1
-
3
-
11624
Servers and clients are 2.4.1 configured active-active failover
one out of two clients is 1.8.9
As soon as I wrote a file to remote directory, the second MDS crashed.
Nov 15 09:00:06 lustre-mds-0-1 kernel: LustreError: 20726:0:(lod_lov.c:554:lod_generate_and_set_lovea()) rhino-MDT0001-mdtlov: Can not locate [0x640000bd0:0x22:0x0]: rc = -5
Nov 15 09:00:06 lustre-mds-0-1 kernel: LustreError: 20726:0:(lod_object.c:704:lod_ah_init()) ASSERTION( lc->ldo_stripenr == 0 ) failed:
Nov 15 09:00:06 lustre-mds-0-1 kernel: LustreError: 20726:0:(lod_object.c:704:lod_ah_init()) LBUG
Nov 15 09:00:06 lustre-mds-0-1 kernel: Pid: 20726, comm: mdt03_000
Nov 15 09:00:06 lustre-mds-0-1 kernel:
Nov 15 09:00:06 lustre-mds-0-1 kernel: Call Trace:
Nov 15 09:00:06 lustre-mds-0-1 kernel: [<ffffffffa0349895>] libcfs_debug_dumpstack+0x55/0x80 [libcfs]
Nov 15 09:00:06 lustre-mds-0-1 kernel: [<ffffffffa0349e97>] lbug_with_loc+0x47/0xb0 [libcfs]
Nov 15 09:00:06 lustre-mds-0-1 kernel: [<ffffffffa0e3f78f>] lod_ah_init+0x57f/0x5c0 [lod]
Nov 15 09:00:06 lustre-mds-0-1 kernel: [<ffffffffa0b73a83>] mdd_object_make_hint+0x83/0xa0 [mdd]
Nov 15 09:00:06 lustre-mds-0-1 kernel: [<ffffffffa0b7feb2>] mdd_create_data+0x332/0x7d0 [mdd]
Nov 15 09:00:06 lustre-mds-0-1 kernel: [<ffffffffa0d9cc2c>] mdt_finish_open+0x125c/0x18a0 [mdt]
Nov 15 09:00:06 lustre-mds-0-1 kernel: [<ffffffffa0d984f8>] ? mdt_object_open_lock+0x1c8/0x510 [mdt]
Nov 15 09:00:06 lustre-mds-0-1 kernel: [<ffffffffa0d9ee8d>] mdt_reint_open+0x115d/0x20c0 [mdt]
Nov 15 09:00:06 lustre-mds-0-1 kernel: [<ffffffffa036682e>] ? upcall_cache_get_entry+0x28e/0x860 [libcfs]
Nov 15 09:00:06 lustre-mds-0-1 kernel: [<ffffffffa071fdcc>] ? lustre_msg_add_version+0x6c/0xc0 [ptlrpc]
Nov 15 09:00:06 lustre-mds-0-1 kernel: [<ffffffffa0d89911>] mdt_reint_rec+0x41/0xe0 [mdt]
Nov 15 09:00:06 lustre-mds-0-1 kernel: [<ffffffffa0d6eae3>] mdt_reint_internal+0x4c3/0x780 [mdt]
Nov 15 09:00:06 lustre-mds-0-1 kernel: [<ffffffffa0d6f06d>] mdt_intent_reint+0x1ed/0x520 [mdt]
Nov 15 09:00:06 lustre-mds-0-1 kernel: [<ffffffffa0d6cf1e>] mdt_intent_policy+0x39e/0x720 [mdt]
Nov 15 09:00:06 lustre-mds-0-1 kernel: [<ffffffffa06d7831>] ldlm_lock_enqueue+0x361/0x8d0 [ptlrpc]
Nov 15 09:00:06 lustre-mds-0-1 kernel: [<ffffffffa06fe1ef>] ldlm_handle_enqueue0+0x4ef/0x10b0 [ptlrpc]
Nov 15 09:00:06 lustre-mds-0-1 kernel: [<ffffffffa0d6d3a6>] mdt_enqueue+0x46/0xe0 [mdt]
Nov 15 09:00:06 lustre-mds-0-1 kernel: [<ffffffffa0d73a97>] mdt_handle_common+0x647/0x16d0 [mdt]
Nov 15 09:00:06 lustre-mds-0-1 kernel: [<ffffffffa0720bac>] ? lustre_msg_get_transno+0x8c/0x100 [ptlrpc]
Nov 15 09:00:06 lustre-mds-0-1 kernel: [<ffffffffa0dad3f5>] mds_regular_handle+0x15/0x20 [mdt]
Nov 15 09:00:06 lustre-mds-0-1 kernel: [<ffffffffa07303c8>] ptlrpc_server_handle_request+0x398/0xc60 [ptlrpc]
Nov 15 09:00:06 lustre-mds-0-1 kernel: [<ffffffffa034a5de>] ? cfs_timer_arm+0xe/0x10 [libcfs]
Nov 15 09:00:06 lustre-mds-0-1 kernel: [<ffffffffa035bd9f>] ? lc_watchdog_touch+0x6f/0x170 [libcfs]
Nov 15 09:00:06 lustre-mds-0-1 kernel: [<ffffffffa0727729>] ? ptlrpc_wait_event+0xa9/0x290 [ptlrpc]
Nov 15 09:00:06 lustre-mds-0-1 kernel: [<ffffffff81055ad3>] ? __wake_up+0x53/0x70
Nov 15 09:00:06 lustre-mds-0-1 kernel: [<ffffffffa073175e>] ptlrpc_main+0xace/0x1700 [ptlrpc]
Nov 15 09:00:06 lustre-mds-0-1 kernel: [<ffffffffa0730c90>] ? ptlrpc_main+0x0/0x1700 [ptlrpc]
Nov 15 09:00:06 lustre-mds-0-1 kernel: [<ffffffff8100c0ca>] child_rip+0xa/0x20
Nov 15 09:00:06 lustre-mds-0-1 kernel: [<ffffffffa0730c90>] ? ptlrpc_main+0x0/0x1700 [ptlrpc]
Nov 15 09:00:06 lustre-mds-0-1 kernel: [<ffffffffa0730c90>] ? ptlrpc_main+0x0/0x1700 [ptlrpc]
Nov 15 09:00:06 lustre-mds-0-1 kernel: [<ffffffff8100c0c0>] ? child_rip+0x0/0x20
Nov 15 09:00:06 lustre-mds-0-1 kernel: