lustre/lod/lod_lov.c
@@ -551,6 +551,7 @@ int lod_generate_and_set_lovea(const struct lu_env *env,
 		objs[i].l_ost_gen    = cpu_to_le32(0);
 		rc = lod_fld_lookup(env, lod, fid, &index, LU_SEQ_RANGE_OST);
 		if (rc < 0) {
+			lod_object_free_striping(env, lo);
 			CERROR("%s: Can not locate "DFID": rc = %d\n",
 			       lod2obd(lod)->obd_name, PFID(fid), rc);
 			RETURN(rc);
